test/files/neg/t7386/A_1.java
public class A_1 {
  abstract static class B {
    public static void m() {}
  }

  public static class C extends B {}
}
